show event state

--- a/views/event.mustache
+++ b/views/event.mustache
@@ -90,7 +90,7 @@
                 <strong class="details">{{event.dateString}}</strong><br />
                 <strong class="details">{{event.location.venue}}</strong><br />
                 <strong class="details">{{event.location.address}}</strong><br />
-                <strong class="details">{{event.location.city}}</strong>
+                <strong class="details">{{event.location.city}}, {{event.location.state}}</strong>
               </p>
     				</div>
 
