--- a/views/account.mustache
+++ b/views/account.mustache
@@ -27,6 +27,10 @@
       background: #f9f9f9;
       padding: 3px 3px 3px 8px;
     }
+
+    .sidebar-menu-option {
+      margin-left: 4px;
+    }
   </style>
 </head>
 
@@ -82,7 +86,8 @@
 			<ul data-submenu-title="Account">
 				<li id="list-item-profile"><a class="sidebar-menu-option" href="#"><i class="sl sl-icon-user-following"></i> Profile</a></li>
 				<li id="list-item-sites"><a class="sidebar-menu-option" href="#"><i class="sl sl-icon-docs"></i> Sites</a></li>
-        <li><a href="/account/logout"><i class="sl sl-icon-close"></i> Log Out</a></li>
+        <li><a style="margin-left:4px" href="/account/logout"><i class="sl sl-icon-close"></i> Log Out</a></li>
+        <li><a style="width:89%;border-radius:4px;margin-left:4px;background:#357d3e" class="button" href="/community?selected=templates"><i class="sl sl-icon-plus"></i> Create Your Site</a></li>
 			</ul>
 		</div>
 	</div>
@@ -93,6 +98,7 @@
 
 			<div class="col-lg-8 col-md-8">
         <div id="content-profile" class="dashboard-list-box margin-top-0">
+          <a style="float:right;border-radius:4px;background:#357d3e;margin-top:16px;margin-right:16px" class="button" href="/community?selected=templates"><i class="sl sl-icon-plus"></i> Create Your Site</a>
 					<h4 class="gray">Profile Details</h4>
 					<div class="dashboard-list-box-static">
             <div class="row">
