--- a/views/index.mustache
+++ b/views/index.mustache
@@ -89,8 +89,9 @@
   								<div class="listing-item-inner" style="padding-right:0px;left:20px">
   									<h3>{{name}}</h3>
                     {{#tags}}<span class="template-tag">{{.}}</span>{{/tags}}
-                    <div class="profile-row">
-  									</div>
+                    <a style="float:right;border-radius:4px;background:#357d3e;" class="button" href="#">
+                      <i class="sl sl-icon-plus"></i> Create Your Site
+                    </a>
   								</div>
 
   							</div>
