--- a/views/index.mustache
+++ b/views/index.mustache
@@ -89,7 +89,7 @@
   								<div class="listing-item-inner" style="padding-right:0px;left:20px">
   									<h3>{{name}}</h3>
                     {{#tags}}<span class="template-tag">{{.}}</span>{{/tags}}
-                    <button class="margin-top-40 button" style="float:right;border-radius:4px;background:#357d3e">
+                    <button class="margin-top-40 button" style="border-radius:4px;background:#357d3e;font-size:12px;padding:6px 12px">
                       <i class="sl sl-icon-plus"></i> Launch This Template
                     </button>
   								</div>
