--- a/views/account.mustache
+++ b/views/account.mustache
@@ -62,7 +62,7 @@
           <div class="header-widget hidden-xs hidden-sm">
             <nav id="navigation" class="style-1">
     					<ul id="responsive">
-                <li><a href="/community?selected=templates">Templates</a></li>
+                <li><a href="/templates">Templates</a></li>
                 <li><a id="nav-faq" href="/?selected=faq">FAQ</a></li>
                 <li><a href="/community">Community</a></li>
   							<li><a id="nav-login" href="#sign-in-dialog" class="popup-with-zoom-anim">Login</a></li>
@@ -87,7 +87,7 @@
 				<li id="list-item-profile"><a class="sidebar-menu-option" href="#"><i class="sl sl-icon-user-following"></i> Profile</a></li>
 				<li id="list-item-sites"><a class="sidebar-menu-option" href="#"><i class="sl sl-icon-docs"></i> Sites</a></li>
         <li><a style="margin-left:4px" href="/account/logout"><i class="sl sl-icon-close"></i> Log Out</a></li>
-        <li><a style="width:89%;border-radius:4px;margin-left:4px;background:#357d3e" class="button" href="/community?selected=templates"><i class="sl sl-icon-plus"></i> Create Your Site</a></li>
+        <li><a style="width:89%;border-radius:4px;margin-left:4px;background:#357d3e" class="button" href="/templates"><i class="sl sl-icon-plus"></i> Create Your Site</a></li>
 			</ul>
 		</div>
 	</div>
@@ -98,7 +98,7 @@
 
 			<div class="col-lg-8 col-md-8">
         <div id="content-profile" class="dashboard-list-box margin-top-0">
-          <a style="float:right;border-radius:4px;background:#357d3e;margin-top:16px;margin-right:16px" class="button" href="/community?selected=templates"><i class="sl sl-icon-plus"></i> Create Your Site</a>
+          <a style="float:right;border-radius:4px;background:#357d3e;margin-top:16px;margin-right:16px" class="button" href="/templates"><i class="sl sl-icon-plus"></i> Create Your Site</a>
 					<h4 class="gray">Profile Details</h4>
 					<div class="dashboard-list-box-static">
             <div class="row">
