links to templates page

--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -24,7 +24,7 @@
 				<div class="header-widget hidden-xs hidden-sm">
           <nav id="navigation" class="style-1">
   					<ul id="responsive">
-  						<li><a href="/community?selected=templates">Templates</a></li>
+  						<li><a href="/templates">Templates</a></li>
 							<li class="hidden-xs hidden-sm"><a id="nav-faq" href="/?selected=faq">FAQ</a></li>
 							<li class="hidden-md hidden-lg"><a href="/community?selected=blog">Blog</a></li>
 							<li><a id="nav-faq" href="/community">Community</a></li>
