--- a/views/event.mustache
+++ b/views/event.mustache
@@ -243,7 +243,7 @@
 
         // create attendee object or add to list in Event in DB
         postRequest('/account/rsvp', attendee, function(err, response){
-          // console.log('CONFIRMATION: ' + JSON.stringify(response))
+          console.log('CONFIRMATION: ' + JSON.stringify(response))
           alert('Thanks! Check your email for confirmation.')
           window.location.href = '/'
         })
