event page copy

--- a/views/event.mustache
+++ b/views/event.mustache
@@ -124,7 +124,12 @@
     			<div class="clearfix"></div>
           <hr />
     			<h3 class="headline margin-top-25 margin-bottom-10">Launch Your Website</h3>
-          <p>Create fully-featured professional websites in minutes. Select a template below to get started.</p>
+          <p>
+            Get up and running with a gorgeous new website in under an hour. Our
+            easy website builder enables anyone to create beautiful, professional
+            websites without endlessly tinkering with confusing tools, drag & drop
+            interfaces or code.
+          </p>
     			<div id="featured-templates" class="row"></div>
     			<div class="margin-top-50"></div>
     	  </div>
