uppercase date string

--- a/views/event.mustache
+++ b/views/event.mustache
@@ -83,7 +83,7 @@
     				<div class="post-content">
               <h1 style="font-size:32px">{{event.name}}</h1>
               <ul class="post-meta">
-    						<li style="text-transform:capitalize">{{event.dateString}}</li>
+    						<li style="text-transform:uppercase">{{event.dateString}}</li>
     					</ul>
               <hr class="margin-top-20 margin-bottom-30" />
               <img class="post-img" src="{{{event.image}}}=s1024" alt="Vertex 360 | {{template.name}}">
