--- a/views/event.mustache
+++ b/views/event.mustache
@@ -86,7 +86,7 @@
     						<li style="text-transform:uppercase">{{event.dateString}}</li>
     					</ul>
               <hr class="margin-top-20 margin-bottom-30" />
-              <img class="post-img argin-bottom-30" src="{{{event.image}}}=s1024" alt="Vertex 360 | {{template.name}}">
+              <img class="post-img margin-bottom-30" src="{{{event.image}}}=s1024" alt="Vertex 360 | {{template.name}}">
     					{{{event.description}}}
     				</div>
 
