--- a/views/submitevent.mustache
+++ b/views/submitevent.mustache
@@ -153,8 +153,8 @@
               return
             }
 
-            console.log(JSON.stringify(response.result))
-            // window.location.href = '/post/'+response.result.slug
+            // console.log(JSON.stringify(response.result))
+            window.location.href = '/event/'+response.result.slug
           },
           error: function(err){
             console.log('ERROR - '+err)
