--- a/views/event.mustache
+++ b/views/event.mustache
@@ -69,6 +69,11 @@
       margin-top: 0px;
       margin-bottom: 0px;
     }
+
+    .post-content ul {
+      margin-top: 30px !important;
+      margin-bottom: 30px !important;
+    }
   </style>
 </head>
 
