--- a/views/event.mustache
+++ b/views/event.mustache
@@ -71,8 +71,8 @@
     }
 
     .post-content ul {
-      margin-top: 30px !important;
-      margin-bottom: 30px !important;
+      margin-top: 30px;
+      margin-bottom: 30px;
     }
   </style>
 </head>
@@ -88,7 +88,7 @@
 
     				<div class="post-content">
               <h1 style="font-size:32px">{{event.name}}</h1>
-              <ul class="post-meta">
+              <ul class="post-meta margin-top-0 margin-bottom-0">
     						<li style="text-transform:uppercase">{{event.dateString}}</li>
     					</ul>
               <hr class="margin-top-20 margin-bottom-30" />
