--- a/views/index.mustache
+++ b/views/index.mustache
@@ -535,15 +535,27 @@
 </script>
 <script>
   (function(){
-    console.log('REFERRER: ' + document.referrer)
     var data = window.__PRELOADED__
     if (data.user != null)
       return
 
-    if (data.referrer != null)
+    if (data.referrer != null){ // referrer already set from previous session
+      console.log('REFERRER: ' + data.referrer)
       return
+    }
 
-    console.log('SET REFERRER: ' + document.referrer)
+    $.ajax({
+      url: '/account/set-referrer',
+      type: 'POST',
+      data: {referrer: document.referrer},
+      success: function(resp){
+        console.log('REFERRER SET: ' + JSON.stringify(resp))
+
+      },
+      error: function(){
+
+      }
+    })
   })()
 </script>
 
