add referrer script to entry pages

--- a/views/community.mustache
+++ b/views/community.mustache
@@ -332,6 +332,7 @@
   <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
   <script type="text/javascript" src="{{{cdn}}}/dist/js/community.min.js"></script>
   <script type="text/javascript" src="{{{cdn}}}/dist/js/sidebar.min.js"></script>
+  <script type="text/javascript" src="{{{cdn}}}/dist/js/referrer.min.js"></script>
   {{#cdn}}{{>analytics}}{{/cdn}}
 </body>
 </html>
