--- a/views/index.mustache
+++ b/views/index.mustache
@@ -393,6 +393,7 @@
 <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
 <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
 <script type="text/javascript" src="{{{cdn}}}/dist/js/home.min.js"></script>
+<script type="text/javascript" src="{{{cdn}}}/dist/js/referrer.min.js"></script>
 <script>
 (function(){
   var data = window.__PRELOADED__
@@ -532,31 +533,6 @@
 		})
   })
 })()
-</script>
-<script>
-  (function(){
-    var data = window.__PRELOADED__
-    if (data.user != null)
-      return
-
-    if (data.referrer != null){ // referrer already set from previous session
-      console.log('REFERRER: ' + data.referrer)
-      return
-    }
-
-    $.ajax({
-      url: '/account/set-referrer',
-      type: 'POST',
-      data: {referrer: document.referrer},
-      success: function(resp){
-        console.log('REFERRER SET: ' + JSON.stringify(resp))
-
-      },
-      error: function(){
-
-      }
-    })
-  })()
 </script>
 
 {{#cdn}}{{>analytics}}{{/cdn}}
