--- a/views/template.mustache
+++ b/views/template.mustache
@@ -186,6 +186,7 @@
 
 <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
 <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
+<script type="text/javascript" src="{{{cdn}}}/dist/js/referrer.min.js"></script>
 <script>
   (function(){
     Mustache.tags = ["<%", "%>"] // change delimiter so it doesn't conflict server side
@@ -270,7 +271,7 @@
 
       $('#btn-launch-container').html("<img style='width:100px' src='https://storage.turbo360.co/vertex360-cms-4hujkc/loader.gif' /><br /><em style='color:#888'>Launching your site. This may take up to 2 minutes...</em>")
       console.log('LAUNCH TEMPLATE: ' + JSON.stringify(body))
-      
+
       postRequest('/account/launch-template', body, function(err, response){
         if (err){
           alert('Error: ' + err.message)
