--- a/views/event.mustache
+++ b/views/event.mustache
@@ -74,6 +74,10 @@
       margin-top: 30px;
       margin-bottom: 30px;
     }
+
+    .post-content h3 {
+      margin-top: 30px;
+    }
   </style>
 </head>
 
