embed youtube video

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -375,6 +375,7 @@
         </li>
       </ul>
       <hr />
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/Uzy4NnSjar8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <p><%{description}%></p>
       <h4 style="margin-top:20px">Screenshots</h4>
       <%#images %>
