--- a/views/index.mustache
+++ b/views/index.mustache
@@ -375,7 +375,9 @@
         </li>
       </ul>
       <hr />
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/Uzy4NnSjar8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <%#hasVideo %>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/{{template.video}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <%#hasVideo %>
       <p><%{description}%></p>
       <h4 style="margin-top:20px">Screenshots</h4>
       <%#images %>
