--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -1,167 +1,22 @@
 <!DOCTYPE html>
 <head>
-  <title>Vertex 360 | Professional Websites. Fast.</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" href="{{{cdn}}}/dist/css/style.min.css">
-  <style>
-    #logo img {
-      max-width: 160px;
-    }
+  {{>head}}
 
-    #footer-logo {
-      max-width: 120px;
-    }
-
-  </style>
+  <meta property="og:title" content="Vertex 360 | Powerful Website Builder. Easy, Fast, Professional." />
+	<meta property="og:type" content="article" />
+	<meta property="og:url" content="https://www.vertex360.co" />
+	<meta property="og:image" content="https://lh3.googleusercontent.com/ZM_FCvAPcwUXd3NZJNpvA-t8jb4RQkkjVAKNXYk_SQHV155T-W36Ghos9W7iiTyxaiKzXl9Z2XhaABotatD3HomhAQ=s260-c" />
+	<meta property="og:image:width" content="260px" />
+	<meta property="og:image:height" content="260px" />
+	<meta property="og:description" content="Vertex 360 is a powerful, fully featured, easy website builder made for busy people. Create your website in under an hour by selecting one of our professional templates and simply updating it with your content. No more messing with confusing editors, drag & drop tools, or ridiculously complicated features for 'beginners'. On Vertex 360, simply input your text and images and move on with your life, business, family - the important stuff." />
 </head>
 
 <body>
 
 <div id="wrapper">
-
-<header id="header-container">
-
-	<div id="header">
-		<div class="container">
-
-			<div class="left-side">
-
-				<div id="logo">
-					<a href="/">
-            <img src="https://storage.turbo360.co/vertex360-cms-4hujkc/vertex-logo-2.svg" alt="">
-          </a>
-				</div>
-
-				<div class="mmenu-trigger">
-					<button class="hamburger hamburger--collapse" type="button">
-						<span class="hamburger-box">
-							<span class="hamburger-inner"></span>
-						</span>
-					</button>
-				</div>
-				<nav id="navigation" class="style-1">
-					<ul id="responsive">
-						<li><a class="current" href="#">Home</a></li>
-						<li><a href="#">How It Works</a></li>
-						<li><a href="#">Templates</a>
-              <ul>
-                {{#categories}}
-                <li><a style="text-transform:capitalize" href="#">{{.}}</a></li>
-                {{/categories}}
-							</ul>
-            </li>
-					</ul>
-				</nav>
-				<div class="clearfix"></div>
-
-			</div>
-			<!-- Left Side Content / End -->
-
-
-			<!-- Right Side Content / End -->
-			<div class="right-side">
-				<div class="header-widget">
-					<a href="#sign-in-dialog" class="button popup-with-zoom-anim">Log In <i class="sl sl-icon-plus"></i></a>
-				</div>
-			</div>
-			<!-- Right Side Content / End -->
-
-			<!-- Sign In Popup -->
-			<div id="sign-in-dialog" class="zoom-anim-dialog mfp-hide">
-
-				<div class="small-dialog-header">
-					<h3>Sign In</h3>
-				</div>
-
-				<!--Tabs -->
-				<div class="sign-in-form style-1">
-
-					<ul class="tabs-nav">
-						<li class=""><a href="#tab1">Log In</a></li>
-						<li><a href="#tab2">Register</a></li>
-					</ul>
-
-					<div class="tabs-container alt">
-
-						<!-- Login -->
-						<div class="tab-content" id="tab1" style="display: none;">
-							<form method="post" class="login">
-
-								<p class="form-row form-row-wide">
-									<label for="username">Username:
-										<i class="im im-icon-Male"></i>
-										<input type="text" class="input-text" name="username" id="username" value="" />
-									</label>
-								</p>
-
-								<p class="form-row form-row-wide">
-									<label for="password">Password:
-										<i class="im im-icon-Lock-2"></i>
-										<input class="input-text" type="password" name="password" id="password"/>
-									</label>
-									<span class="lost_password">
-										<a href="#" >Lost Your Password?</a>
-									</span>
-								</p>
-
-								<div class="form-row">
-									<input type="submit" class="button border margin-top-5" name="login" value="Login" />
-									<div class="checkboxes margin-top-10">
-										<input id="remember-me" type="checkbox" name="check">
-										<label for="remember-me">Remember Me</label>
-									</div>
-								</div>
-
-							</form>
-						</div>
-
-						<!-- Register -->
-						<div class="tab-content" id="tab2" style="display: none;">
-							<form method="post" class="register">
-  							<p class="form-row form-row-wide">
-  								<label for="username2">Username:
-  									<i class="im im-icon-Male"></i>
-  									<input type="text" class="input-text" name="username" id="username2" value="" />
-  								</label>
-  							</p>
-
-  							<p class="form-row form-row-wide">
-  								<label for="email2">Email Address:
-  									<i class="im im-icon-Mail"></i>
-  									<input type="text" class="input-text" name="email" id="email2" value="" />
-  								</label>
-  							</p>
-
-  							<p class="form-row form-row-wide">
-  								<label for="password1">Password:
-  									<i class="im im-icon-Lock-2"></i>
-  									<input class="input-text" type="password" name="password1" id="password1"/>
-  								</label>
-  							</p>
-
-  							<p class="form-row form-row-wide">
-  								<label for="password2">Repeat Password:
-  									<i class="im im-icon-Lock-2"></i>
-  									<input class="input-text" type="password" name="password2" id="password2"/>
-  								</label>
-  							</p>
-
-  							<input type="submit" class="button border fw margin-top-10" name="register" value="Register" />
-							</form>
-						</div>
-
-					</div>
-				</div>
-			</div>
-			<!-- Sign In Popup / End -->
-
-		</div>
-	</div>
-</header>
-
-<div class="clearfix"></div>
-<!-- Header Container / End -->
+  {{>nav}}
+  <div class="clearfix"></div>
+  <!-- Header Container / End -->
 
 
 <div class="main-search-container" data-background-image="https://lh3.googleusercontent.com/IWUouz6uPWLofipKuaHh219C5AdniATu6C85bd6DGogdQlJ1M8BAFk6uZx-Q10pVlgYMHrRuZC5V83P_g5XGv21_bRI=s2048" style="max-height:500px">
@@ -173,24 +28,6 @@
 					<h2>Professional Websites. Fast.</h2>
 					<h4>Create fully-featured professional websites in minutes</h4>
 
-					<div class="main-search-input">
-
-						<div class="main-search-input-item location">
-							<div>
-                <h4 style="margin-top:6px">Launch Your Site</h4>
-							</div>
-						</div>
-
-						<div class="main-search-input-item">
-							<select data-placeholder="All Categories" class="chosen-select">
-                {{#categories}}
-                <option style="text-transform:capitalize" value={{.}}>{{.}}</option>
-                {{/categories}}
-							</select>
-						</div>
-						<button class="button">Browse Templates</button>
-
-					</div>
 				</div>
 			</div>
 		</div>
@@ -521,55 +358,7 @@
 </section>
 <!-- Recent Blog Posts / End -->
 
-
-<div id="footer" class="sticky-footer" style="background: rgb(248, 248, 248)">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 col-sm-6">
-				<img id="footer-logo" class="footer-logo" src="https://storage.turbo360.co/vertex360-cms-4hujkc/vertex-logo-2.svg" alt="">
-				<br /><br />
-				<p>
-          Morbi convallis bibendum urna ut viverra. Maecenas quis consequat libero, a feugiat eros. Nunc ut lacinia tortor morbi ultricies laoreet ullamcorper phasellus semper.
-        </p>
-			</div>
-
-			<div class="col-md-3 col-sm-6">
-				<h4>Helpful Links</h4>
-				<ul class="footer-links">
-          <li><a href="#">Sign Up</a></li>
-					<li><a href="#">FAQ</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
-				<div class="clearfix"></div>
-			</div>
-
-			<div class="col-md-3 col-sm-12">
-				<h4>Contact Us</h4>
-				<div class="text-widget">
-					<span>12345 Little Lonsdale St, Melbourne</span> <br>
-					Phone: <span>(123) 123-456 </span><br>
-					E-Mail:<span> <a href="#">office@example.com</a> </span><br>
-				</div>
-
-				<ul class="social-icons margin-top-20">
-					<li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
-					<li><a class="gplus" href="#"><i class="icon-gplus"></i></a></li>
-					<li><a class="youtube" href="#"><i class="icon-youtube"></i></a></li>
-				</ul>
-
-			</div>
-
-		</div>
-
-		<!-- Copyright -->
-		<div class="row">
-			<div class="col-md-12">
-				<div class="copyrights">&copy; 2019 Turbo 360, Inc. All Rights Reserved.</div>
-			</div>
-		</div>
-	</div>
-</div>
+  {{>footer-dark}}
 </div>
 <!-- Wrapper / End -->
 
