add agency template option

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -222,6 +222,7 @@
               <option value="landing">Landing</option>
               <option value="portfolio">Portfolio</option>
               <option value="professional">Professional</option>
+              <option value="agency">Agency</option>
               <option value="community">Community</option>
             </select>
           </div>
