render analytics conditional

--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -386,9 +386,7 @@
       })
     })()
   </script>
-  {{#cdn}}
-  {{>analytics}}
-  {{/cdn}}
 
+  {{#renderAnalytics}}{{>analytics}}{{/renderAnalytics}}
 </body>
 </html>
