--- a/views/community.mustache
+++ b/views/community.mustache
@@ -333,6 +333,6 @@
   <script type="text/javascript" src="{{{cdn}}}/dist/js/community.min.js"></script>
   <script type="text/javascript" src="{{{cdn}}}/dist/js/sidebar.min.js"></script>
   <script type="text/javascript" src="{{{cdn}}}/dist/js/referrer.min.js"></script>
-  {{#cdn}}{{>analytics}}{{/cdn}}
+  {{#renderAnalytics}}{{>analytics}}{{/renderAnalytics}}
 </body>
 </html>
