--- a/views/event.mustache
+++ b/views/event.mustache
@@ -329,6 +329,6 @@
     })()
   </script>
 
-  {{#cdn}}{{>analytics}}{{/cdn}}
+  {{#renderAnalytics}}{{>analytics}}{{/renderAnalytics}}
 </body>
 </html>
