--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -364,6 +364,6 @@
 
 
 <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
-
+{{#renderAnalytics}}{{>analytics}}{{/renderAnalytics}}
 </body>
 </html>
