--- a/views/post.mustache
+++ b/views/post.mustache
@@ -237,9 +237,6 @@
   })()
 </script>
 
-{{#cdn}}
-{{>analytics}}
-{{/cdn}}
-
+{{#renderAnalytics}}{{>analytics}}{{/renderAnalytics}}
 </body>
 </html>
