--- a/views/templates.mustache
+++ b/views/templates.mustache
@@ -374,6 +374,9 @@
         </li>
       </ul>
       <hr />
+      <%#hasVideo %>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/<%template.video%>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <%/hasVideo %>
       <p><%{description}%></p>
       <h4 style="margin-top:20px">Screenshots</h4>
       <%#images %>
